styles.css
/* *{
    border: 1px solid red;
} */

:root {
    --border: rgb(13, 169, 13);
    --dots: rgb(20, 65, 20);

    --g1: #33c583;
    --g2: #f98ef6;
    --g3: #fff600;
}

body{
    background-color: rgb(13,13,13);
    display: grid;
    height: 100vh;
    margin: 0px;
    padding: 0px;
    place-items: center;
}

.card {
    aspect-ratio: 1 / 1.6;
    border: 0.5vmin solid var(--border);
    cursor: pointer;
    position: relative;
    width: 56vmin;
  }

.card::before{
    background: linear-gradient(
        135deg,
        transparent 0% 33%,
        var(--g1) 66%,
        var(--g2) 87.5%,
        var(--g3) 100%
    );
    background-position: 0% 0%;
    background-size: 300% 300%;
    content: "";
    position: absolute;
    top: 0px;
    left: 0px;
    height: 100%;
    width: 100%;
    z-index: 1;
    transition: background-position 350ms ease, transform 350ms ease;

}

.card:hover::before{
    background-position: 100% 100%;
    transform: scale(1.13, 1.07);
}

.card-content{
    height: 100%;
    width: 100%;
    /* adds a dot to the background, use the background-size attribute to fill the card with duplicates*/
    background: radial-gradient(
        var(--dots) 7%,
        transparent 7%
    );
    background-position: 0%, 0%;
    background-size: 5vmin 5vmin;
}

